<resources>
    <!--    <string name="app_name">Digits</string>   -->

    <string name="app_ID">360007364251</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="leaderboard2_ID">CgkIm93xkL0KEAIQBA</string>
    <string name="leaderboard_ID">CgkIm93xkL0KEAIQAQ</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="app_name">Digits</string>
    <string name="game_title">Digits</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
       <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="leaderboard">View Leaderboard</string>
    <string name="leaderboard_explanation">Who\'s on top?</string>




    <string name="error">Error</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="home_icon">&#xf015;</string>
    <string name="play_icon"></string>
    <string name="leaderboard_icon"></string>
    <string name="signout_icon"></string>


</resources>
